--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -563,6 +563,14 @@ button:hover {
   width:100%;
   position:absolute;
   }
+.new .fas {
+ display: inline-block;
+
+}
+
+  
+
+   
 
 
 /* .candidates_profile .nav-tabs {
