--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -98,6 +98,12 @@ img.wp-smiley,
 }
 
 
+
+
+/*========================================================================================================================================== */
+/* ______________________________________________________________________Index_________________________________________________________ */
+
+
 #header{
   background-color: black;
 }
@@ -231,7 +237,10 @@ select{
 
 
 
-/* __________________________________________________JOBS________________________________________________________ */
+
+/*========================================================================================================================================== */
+/* ______________________________________________________________________Jobs_________________________________________________________ */
+
 
 #header2 {
      
@@ -306,7 +315,9 @@ select{
 
 
 
-/* _______________________________________Candidates________________________________________ */
+/*========================================================================================================================================== */
+/* ______________________________________________________________________Candidates_________________________________________________________ */
+
 
 #header3{
      
@@ -377,7 +388,8 @@ background: grey;          /* background: linear-gradient(180deg,  #18304bf1, #1
 
 
 
-/* _______________________________________loginPage________________________________________ */
+/*========================================================================================================================================== */
+/* ______________________________________________________________________LogIn_Page_________________________________________________________ */
 
 
 #header4{
@@ -479,7 +491,9 @@ button:hover {
 
 
 
-/* ____________________________________Candidate_dashboard_________________________________ */
+/*========================================================================================================================================== */
+/* ______________________________________________________________________Candidates_Dashboard_________________________________________________________ */
+
 
 .resume{
   border-radius: none !important;
@@ -576,6 +590,7 @@ button:hover {
 .addnew_icon p{
   font-size: 15px;
   text-decoration:#55A747 underline ;
+  cursor: pointer;
   }
   
 
@@ -626,58 +641,57 @@ button:hover {
   width: max-content;
 }
 
-
-/* .candidates_profile .nav-tabs {
-  border: 0;
-}
-
-.candidates_profile .nav-link {
-  border: 0;
-  padding: 12px 15px 12px 0;
+#portfolioPic {
+  border-radius: 5px;
+  cursor: pointer;
   transition: 0.3s;
-  color: #2c4964;
-  border-radius: 0;
-  border-right: 2px solid #ebf1f6;
-  font-weight: 600;
-  font-size: 15px;
 }
 
-.candidates_profile .nav-link:hover {
-  color: #1977cc;
+#portfolioPic:hover {opacity: 0.7;}
+
+
+.skill_card{
+  margin-top: 18px;
+  padding-bottom: 16px;
+  border-bottom: 1px solid;
+  border-color: #e4e1e1;
+
 }
 
-.candidates_profile .nav-link.active {
-  color: #1977cc;
-  border-color: #1977cc;
+.skill_card a{
+  color: black !important;
+  font-size: 14px;
 }
 
-.candidates_profile .tab-pane.active {
-  -webkit-animation: fadeIn 0.5s ease-out;
-  animation: fadeIn 0.5s ease-out;
+.skill_card p{
+color: #777777;
+  font-size: 12px;
+  font-weight: 700;
 }
 
-.candidates_profile .details h3 {
-  font-size: 26px;
-  font-weight: 600;
-  margin-bottom: 20px;
-  color: #2c4964;
+.skill_card .card{
+  width: max-content;
 }
 
-.candidates_profile .details p {
-  color: #777777;
+.awards_card{
+  margin-top: 18px;
+  padding-bottom: 16px;
+  border-bottom: 1px solid;
+  border-color: #e4e1e1;
+
 }
 
-.candidates_profile .details p:last-child {
-  margin-bottom: 0;
+.awards_card a{
+  color: black !important;
+  font-size: 14px;
 }
 
-@media (max-width: 992px) {
-  .candidates_profile .nav-link {
-    border: 0;
-    padding: 15px;
-  }
-  .candidates_profile .nav-link.active {
-    color: #fff;
-    background: #1977cc;
-  }
-} */
+.awards_card p{
+color: #777777;
+  font-size: 12px;
+  font-weight: 700;
+}
+
+.awards_card .card{
+  width: max-content;
+}
