--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -494,7 +494,6 @@ button:hover {
 /*========================================================================================================================================== */
 /* ______________________________________________________________________Candidates_Dashboard_________________________________________________________ */
 
-
 .resume{
   border-radius: none !important;
   border: none !important;
@@ -533,33 +532,6 @@ button:hover {
 
 .sidebar-tabs a:hover{
   color: #55A747;
-}
-
-
-.jobs-inner-card{
-  border: solid 0.5px rgba(128, 128, 128, 0.089);
-  /* background-color: white; */
-  transition: all ease-in-out 0.3s;
-}
-
-.jobs-inner-card h6{
-  margin-top: 5px;
-}
-
-.jobs-inner-card h6:hover{
-  color: rgb(85, 167, 71) !important;
-}
-
-.jobs-inner-card p{
-  font-size: 12px;
-  color: rgb(88, 88, 88);
-}
-
-.jobs-inner-card a{
-  margin-top: 2px;
-  font-size: 12px;
-  color: rgb(85, 167, 71) !important;
-  text-decoration: none !important;
 }
 
 .sidebar-filters{
@@ -694,4 +666,84 @@ color: #777777;
 
 .awards_card .card{
   width: max-content;
+}
+
+
+.shortlistedJobs_card{
+  border: solid 0.5px rgba(128, 128, 128, 0.089);
+  /* background-color: white; */
+  transition: all ease-in-out 0.3s;
+  margin-top: 20px;
+  cursor: pointer;
+}
+
+.shortlistedJobs_card h6{
+  margin-top: 20px;
+}
+
+.shortlistedJobs_card p{
+  font-size: 12px;
+  color: rgb(88, 88, 88);
+}
+
+.appliedJobs_card{
+  border: solid 0.5px rgba(128, 128, 128, 0.089);
+  /* background-color: white; */
+  transition: all ease-in-out 0.3s;
+  margin-top: 20px;
+  cursor: pointer;
+}
+
+.appliedJobs_card h6{
+  margin-top: 20px;
+}
+
+.appliedJobs_card p{
+  font-size: 12px;
+  color: rgb(88, 88, 88);
+}
+
+.progressIndicatorYes{
+  text-align: center;
+  border: solid thin #55A747;
+  color: #55A747;
+}
+
+.progressIndicatorNo{
+  text-align: center;
+  border: solid thin rgb(230, 38, 38);
+  color: rgb(230, 38, 38);
+}
+
+.jobAlerts_card{
+  border: solid 0.5px rgba(128, 128, 128, 0.089);
+  /* background-color: white; */
+  transition: all ease-in-out 0.3s;
+  margin-top: 20px;
+  cursor: pointer;
+}
+
+.jobAlerts_card h6{
+  margin-top: 20px;
+}
+
+.jobAlerts_card p{
+  font-size: 12px;
+  color: rgb(88, 88, 88);
+}
+
+.CVBox{
+  border: solid 1px  rgba(27, 27, 27, 0.096);
+  padding: 15px;
+  padding-left: 25px !important;
+}
+
+.CVBox p{
+  font-size: 13.5px;
+  color: rgb(8, 8, 8);
+}
+
+.CVBox .btn-default:hover{
+  background-color: white !important;
+  cursor: pointer;
 }
